Security/serviceaccount.yaml
# Service account can be linked with roles and role binding to provide a specific access.

# $ kubectl create serviceaccount jenkins -o yaml --dry-run=client 

apiVersion: v1
kind: ServiceAccount
metadata:
  creationTimestamp: null
  name: jenkins

# $ kubectl create token jenkins --duration=50h

apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
  serviceAccountName: jenkins

# If a token needs to be created for a service account with NO expire date. (Not a best practice)

apiVersion: v1
kind: Secret
metadata:
  name: jenkins
  annotations:
    kubernetes.io/service-account.name: "jenkins"
type: kubernetes.io/service-account-token
